# starter-django-react-tailwind-graphql

./: .gitignore  pyproject.toml
config/: .gitignore  schema.py  settings.py  urls.py
web/: .env.production  package-lock.json  package.json
web/src/: App.js
